fix: 移除macos支持(本体不支持, 忘记了)

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,12 +22,12 @@ jobs:
           - goos: windows
             goarch: amd64
             suffix: ".exe"
-          - goos: darwin
-            goarch: amd64
-            suffix: ""
-          - goos: darwin
-            goarch: arm64
-            suffix: ""
+          # - goos: darwin
+          #   goarch: amd64
+          #   suffix: ""
+          # - goos: darwin
+          #   goarch: arm64
+          #   suffix: ""
 
     steps:
       - name: Checkout code
