--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,11 +59,11 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          draft: true
           files: |
             build/*.zip
             build/*.tar.gz
           body: ${{ steps.release_template.outputs.content }}
+          append: true
 
       - name: Upload artifacts
         if: "!startsWith(github.ref, 'refs/tags/')"
