--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,15 +14,17 @@ permissions:
 jobs:
   build:
     name: Build and Release
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
-          - goos: linux
+          - os: ubuntu-latest
+            goos: linux
             goarch: amd64
             suffix: ""
             artifacts: "*.tar.gz"
-          - goos: windows
+          - os: windows-latest
+            goos: windows
             goarch: amd64
             suffix: ".exe"
             artifacts: "*.zip"
@@ -43,6 +45,7 @@ jobs:
           GOARCH: ${{ matrix.goarch }}
         run: |
           make package
+        shell: bash
 
       - name: Build Changelog
         if: startsWith(github.ref, 'refs/tags/')
@@ -60,6 +63,7 @@ jobs:
           echo "${template/-VERSION-/${{ github.ref_name }}}" >> $GITHUB_OUTPUT
           echo "${{ steps.github_release.outputs.changelog }}" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
+        shell: bash
 
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
@@ -68,7 +72,6 @@ jobs:
           files: |
             build/${{ matrix.artifacts }}
           body: ${{ steps.release_template.outputs.content }}
-          generate_release_notes: true
           append_body: true
           draft: true
           fail_on_unmatched_files: true
