--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,84 +2,78 @@ name: CD
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [main]
+    tags: ["v*"]
   workflow_dispatch:
-
-permissions:
-  contents: write
-  pull-requests: read
-  issues: read
 
 jobs:
   build:
-    name: Build and Release
+    name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         include:
           - os: ubuntu-latest
             goos: linux
             goarch: amd64
-            suffix: ""
-            artifacts: "*.tar.gz"
           - os: windows-latest
             goos: windows
             goarch: amd64
-            suffix: ".exe"
-            artifacts: "*.zip"
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v4
         with:
-          go-version: 'stable'
-          cache: true
+          go-version: "1.21"
 
-      - name: Packaging
+      - name: Install dependencies (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc libgl1-mesa-dev xorg-dev
+        shell: bash
+
+      - name: Install CMDs
+        run: |
+          make install-all-go-cmds
+        shell: bash
+
+      - name: Build and Package
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
-        run: |
-          make package
+        run: make package
         shell: bash
-
-      - name: Build Changelog
-        if: startsWith(github.ref, 'refs/tags/')
-        id: github_release
-        uses: mikepenz/release-changelog-builder-action@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Load Release Template
-        if: startsWith(github.ref, 'refs/tags/')
-        id: release_template
-        run: |
-          template=$(cat .github/release-template.md)
-          echo "content<<EOF" >> $GITHUB_OUTPUT
-          echo "${template/-VERSION-/${{ github.ref_name }}}" >> $GITHUB_OUTPUT
-          echo "${{ steps.github_release.outputs.changelog }}" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-        shell: bash
-
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            build/${{ matrix.artifacts }}
-          body: ${{ steps.release_template.outputs.content }}
-          append_body: true
-          draft: true
-          fail_on_unmatched_files: true
 
       - name: Upload artifacts
-        if: "!startsWith(github.ref, 'refs/tags/')"
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: binaries
-          path: build/${{ matrix.artifacts }}
-          retention-days: 5
+          name: bookxnote-local-ocr-${{ matrix.goos }}-${{ matrix.goarch }}
+          path: build/bookxnote-local-ocr-${{ matrix.goos }}-${{ matrix.goarch }}
+
+  release:
+    name: Create Release
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/**/*
+          body_path: ${{ github.workspace }}/.github/release-notes.md
+          draft: true
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
