--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,6 +25,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: testing win 7zip installed
+        if: matrix.os == 'windows-latest'
+        run: |
+          7zip --help
+        shell: bash
+        continue-on-error: true
+
+      - name: testing win 7zip installed
+        if: matrix.os == 'windows-latest'
+        run: |
+          7zip.exe --help
+        shell: bash
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
