--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,11 +28,25 @@ jobs:
       - name: testing win 7zip installed
         if: matrix.os == 'windows-latest'
         run: |
+          7z --help
+        shell: bash
+        continue-on-error: true
+
+      - name: testing win 7zip installed 2
+        if: matrix.os == 'windows-latest'
+        run: |
           7zip --help
         shell: bash
         continue-on-error: true
 
-      - name: testing win 7zip installed
+      - name: testing win 7zip installed 3
+        if: matrix.os == 'windows-latest'
+        run: |
+          7z.exe --help
+        shell: bash
+        continue-on-error: true
+
+      - name: testing win 7zip installed 4
         if: matrix.os == 'windows-latest'
         run: |
           7zip.exe --help
