--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -72,7 +72,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: artifacts/**/*
-          body_path: ${{ github.workspace }}/.github/release-notes.md
+          body_path: ${{ github.workspace }}/.github/release-note.md
           draft: true
           generate_release_notes: true
         env:
