--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,6 +6,11 @@ on:
       - "v*"
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: read
+  issues: read
+
 jobs:
   build:
     name: Build on ${{ matrix.os }}
@@ -17,9 +22,11 @@ jobs:
           - os: ubuntu-latest
             goos: linux
             goarch: amd64
+            archive_ext: .tar.gz
           - os: windows-latest
             goos: windows
             goarch: amd64
+            archive_ext: .zip
 
     steps:
       - name: Checkout code
@@ -53,27 +60,34 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bookxnote-local-ocr-${{ matrix.goos }}-${{ matrix.goarch }}
-          path: build/bookxnote-local-ocr-${{ matrix.goos }}-${{ matrix.goarch }}
+          path: build/bookxnote-local-ocr-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.archive_ext }}
 
   release:
     name: Create Release
     needs: build
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
+    env:
+      DOWNLOADED_PATH: ${{ github.workspace }}/pre_build_artifacts
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
+          path: ${{ env.DOWNLOADED_PATH }}
+
+      - name: Ensure downloaded files
+        run: ls -R ${{ env.DOWNLOADED_PATH }}
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
-          files: artifacts/**/*
-          body_path: .github/release-note.md
+          files: |
+            ${{ env.DOWNLOADED_PATH }}/**/*
+          body_path: ${{ github.workspace }}/.github/release-note.md
           draft: true
           generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
